Slice 9 (Teil 1): TeilnehmerTab/OnboardingTab/VeranstaltungenTab/ UserEditorModal/OrganisatorDashboard/TeilnehmerDashboard auf Gruppenkategorien umstellen
Neue gemeinsame Helfer (frontend/src/composables/useGruppenkategorieColumns.js),
verallgemeinert aus dem in TeilnehmerTab.vue bereits vorhandenen Muster
(gk:<Kategorie>-Sortierschlüssel, gruppenwerteByKategorie-Lookups) -
angewendet auf:

- TeilnehmerTab.vue: alte flache Gruppen-Spalte/Filter entfernt, nur
  noch die bereits vorhandene per-Kategorie-Darstellung.
- OnboardingTab.vue: flache "Gruppen"-Spalte durch eine Spalte je
  Gruppenkategorie ersetzt (dynamisch, sortierbar).
- VeranstaltungenTab.vue: flache Gruppen-CRUD-Verwaltung entfernt
  (Gruppenkategorien-CRUD ist der einzige verbleibende Weg); die
  Teilnehmer-Unterliste zeigt jetzt eine Spalte je Gruppenkategorie.
- UserEditorModal.vue: die Checkbox-Liste aller flachen Gruppen ersetzt
  durch einen Steuerelement je Gruppenkategorie (Select für einwertige,
  Checkboxen für mehrwertige Kategorien).
- OrganisatorService#createUser/updateUser: übernehmen jetzt
  dto.gruppenwerteByKategorie (voller Ersatz je Kategorie) statt des
  flachen dto.gruppen-Feldes.
- OrganisatorDashboard.vue: teilnehmerGruppen (Pflichtgruppen-Dropdown
  für Pflichtvorträge) leitet sich jetzt aus gruppenwerteByKategorie ab.
- TeilnehmerDashboard.vue: das eigene Profil zeigt eine Zeile je
  Gruppenkategorie statt einer flachen "Gruppen"-Zeile.
- Nicht mehr benötigten frontend/src/stores/group.js entfernt.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>