@@ -3,11 +3,13 @@ package kreyj.konfplan.domain.service;
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
 import kreyj.konfplan.adapter.in.web.dto.OnboardingStatusDto;
+import kreyj.konfplan.persistence.GruppenkategorieWert;
 import kreyj.konfplan.persistence.Nutzer;
 import kreyj.konfplan.persistence.Teilnehmer;
-import kreyj.konfplan.util.StringHelper;
 
 import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 /**
  * Beantwortet "wer hat noch kein echtes eigenes Passwort vergeben" fuer den Organisator-Onboarding-
@@ -26,15 +28,17 @@ public class OnboardingStatusService {
                 nutzer.getLoginName(),
                 nutzer.getRole(),
                 nutzer.getEmail(),
-                gruppenVon(nutzer),
+                gruppenwerteByKategorieVon(nutzer),
                 keycloakUserProvisioningService.hatEchtesPasswort(nutzer)))
             .toList();
     }
 
-    private List<String> gruppenVon(Nutzer nutzer) {
+    private Map<String, List<String>> gruppenwerteByKategorieVon(Nutzer nutzer) {
         if (!(nutzer instanceof Teilnehmer teilnehmer)) {
-            return List.of();
+            return Map.of();
         }
-        return teilnehmer.getGruppen().stream().sorted(StringHelper.NUM_OR_ALPHA_COMPARATOR).toList();
+        return teilnehmer.getGruppenwerte().stream()
+            .collect(Collectors.groupingBy(w -> w.getGruppenkategorie().getName(),
+                Collectors.mapping(GruppenkategorieWert::getWert, Collectors.toList())));
     }
 }
